--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "sequelize": "^6.19.0",
     "sequelize-typescript": "^2.1.3",
     "telegraf-ts": "^3.89.1",
-    "ton": "^13.4.1"
+    "ton": "^13.4.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
