--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "del-cli --force dist && tsc && node dist/index.js",
+    "start": "del-cli --force dist && tsc && node dist/src/index.js",
     "build": "tsc --build",
     "clean": "tsc --build --clean"
   },
@@ -22,6 +22,7 @@
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
+    "@types/base-64": "^1.0.0",
     "@types/lodash": "^4.14.182",
     "@types/moment": "^2.13.0",
     "ts-jest": "^28.0.6",
