--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,21 @@
 {
     "compilerOptions": {
-        "module": "CommonJS",
-        "target": "es6",
         "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "esModuleInterop": true,
-        "noImplicitAny": false,
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "sourceMap": true,
+        "module": "commonjs",
+        "target": "es6",
+        "declaration": true,
+        "composite": true,
         "outDir": "dist",
+        "rootDir": ".",
+        "strict": true,
         "baseUrl": ".",
-        "allowJs": true,
         "lib": [
-          "ES2021",
-          "esnext.asynciterable",
-          "es2015.iterable"
+            "es2020"
         ],
         "rootDirs": [
             "./src"
-        ]
+        ],
+        "allowSyntheticDefaultImports": true
     },
     "include": [
         "src"
